# some-example-of-my-code

./: README.md
lab7/: CMakeLists.txt  main.cpp
lab7/data/: output.csv  world_population_1960-2018.csv
lab7/src/part1/header_file/: WorldPopulation.h  country.h  readCountryFromFile.h
lab7/src/part1/sours_file/: WorldPopulation.cpp  country.cpp  readCountryFromFile.cpp
lab7/src/part2/header_file/: CountryFeature.h  IncomeGroup.h  Program.h  WorldCountry.h  WorldRegionPopulation.h  readCountryFeatureFromFile.h
lab7/src/part2/sours_file/: CountryFeature.cpp  Program.cpp  WorldRegionPopulation.cpp  readCountryFeatureFromFile.cpp
lab8/: CMakeLists.txt  Program.h  RationalNumber.h  main.cpp
